Revision history for perl distribution Convos

6.26 Not Released
 - Fix clearing the global search
 - Fix "+#" and "+@" in search bar to also filter "60+" #607 #609

6.25 2021-07-18T10:14:00+0900
 - Add handler for irc:// links #311
 - Add support for raw messages #592
 - Add support for a single character within backticks #602
 - Add settings icon to Notifications page #606
 - Add confirmation before deleting a connection #610
 - Made "+" filter in search bar sticky and also filter "60+" #607 #609
 - Fix not showing double quotes in previews #608
 - Fix animation when focusing sidebar-header search field

6.24 2021-06-02T10:28:00+0900
 - Add chat input field sent messages/commands history #598
 - Fix rendering notifications with non-unicode characters #596
 - Fix /chat/ will render notifications
 - Fix width of sidebar-header input in Firefox 78.10.0 ESR
 - Changed extended formatting to be stripped frontend code #600

6.23 2021-05-29T11:55:00+0900
 - Add popover on nick click, closes #566, #591
 - Fix hiding menu when selecting an emoji
 - Fix allowing to create new connections for non-admin users

6.22 2021-05-28T10:25:00+0900
 - Add GNOME theme #594
 - Fix joining password protected channels

6.21 2021-05-28T09:43:00+0900
 - Add possibility to remove password protection in Conversation Settings
 - Add active conversation modes to Conversation Settings
 - Can toggle channel modes from conversation settings
 - Fix sending messages to participants in connection conversation
 - Fix setting password in conversation settings
 - Fix setting topic in conversation settings
 - Fix toggling notification in conversation settings
 - Fix bug where conversation modes could get reset
 - Fix bug where user modes could get reset
 - Fix being able to change the topic if the channel has mode -t #427

6.20 2021-05-25T10:03:00+0900
 - Add support for Github Webhooks, through the bot system
 - Compatible with Mojolicious::Plugin::Webpack 1.01
 - Bumped many JavaScript dependencies